Updated Twitter handle.

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ paginate:            5
 # About/contact
 author:
   name:              Jeremy Neal
-  twitter:           https://twitter.com/@sdroadie92
+  twitter:           https://twitter.com/@_jneal_
   github:            https://github.com/sdroadie
   email:             jneal1992@gmail.com
 
