--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ paginate_path:      '/page-:num/'
 # About/contact
 author:
   name:              Jeremy Neal
-  twitter:           https://twitter.com/@waiting_hissing
+  twitter:           https://twitter.com/@radglob
   github:            https://github.com/sdroadie
   email:             jneal1992@gmail.com
 
