--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ title:               Jeremy Neal
 tagline:             'Software Developer'
 description:         "I'm a Baltimore-based software developer. I love programming Clojure and Python mainly, though I always try to learn new skills."
 url:                 http://sdroadie.github.io
+baseurl:             /
 paginate:            5
 paginate_path:      '/page-:num/'
 
